"flex-wrap" added

--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,7 @@ main #about-section .container {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 main #about-section .container > div.left-side {
@@ -386,6 +387,7 @@ main #team-section div.team-container .team {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
@@ -461,6 +463,7 @@ footer #links-section {
     padding-right: 72px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 4rem;
 }
 
