--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,11 @@ header {
 }
 
 header .logo {
-    height: 52px;
+    height: 45px;
 }
 
 header nav div a span {
+    font-size: .9em;
     color: #FFF;
     opacity: .85;
     transition: all .4s;
@@ -36,7 +37,7 @@ header nav div a span:hover {
 }
 
 header nav div ul {
-    margin: 0 20px;
+    margin-left: 35px;
     gap: 15px;
 }
 
@@ -45,8 +46,8 @@ header nav .search-field input {
     border-radius: 25px;
     padding-left: 40px;
     padding-right: 20px;
-    min-height: 40px;
-    font-size: 1em;
+    min-height: 38px;
+    font-size: .9em;
     background-color: rgb(255, 255, 255, .85);
     transition: all .4s;
 }
@@ -502,12 +503,17 @@ footer #others-section .others-img-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     margin-bottom: 2rem;
 }
 
+footer #others-section .others-img-container img {
+    height: 45px;
+}
+
 footer #others-section .others-img-container img.icon {
-    width: 40px;
+    width: 25px;
+    height: 25px;
     cursor: pointer;
 }
 
