--- a/css/style.css
+++ b/css/style.css
@@ -1,202 +1,202 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
-    font-family: 'Poppins', sans-serif !important;
+  font-family: "Poppins", sans-serif !important;
 }
 
 /* CABEÇALHO */
 
 header {
-    padding: 0 30px;
-    background: linear-gradient(to right, #2a0059, #01676e);
-    border-bottom: 1px solid rgb(255, 255, 255, .2);
+  padding: 0 30px;
+  background: linear-gradient(to right, #2a0059, #01676e);
+  border-bottom: 1px solid rgb(255, 255, 255, 0.2);
 }
 
 header .logo {
-    height: 45px;
+  height: 45px;
 }
 
 header nav div a span {
-    font-size: .9em;
-    color: #FFF;
-    opacity: .85;
-    transition: all .4s;
+  font-size: 0.9em;
+  color: #fff;
+  opacity: 0.85;
+  transition: all 0.4s;
 }
 
 header nav div a span:hover {
-    opacity: 1;
-    text-decoration: underline;
-    color: #1bffff;
+  opacity: 1;
+  text-decoration: underline;
+  color: #1bffff;
 }
 
 header nav div ul {
-    margin-left: 30px;
-    gap: 15px;
+  margin-left: 30px;
+  gap: 15px;
 }
 
 header nav .search-field {
-    width: 300px;
-    margin-right: 15px;
+  width: 35%;
+  margin-right: 15px;
 }
 
 header nav .search-field input {
-    border: none;
-    border-radius: 25px;
-    padding-left: 40px;
-    padding-right: 20px;
-    width: 100%;
-    font-size: .9em;
-    background-color: rgb(255, 255, 255, .85);
-    transition: all .4s;
+  border: none;
+  border-radius: 25px;
+  padding-left: 40px;
+  padding-right: 20px;
+  width: 100%;
+  font-size: 0.9em;
+  background-color: rgb(255, 255, 255, 0.85);
+  transition: all 0.4s;
 }
 
 header nav .search-field input:focus {
-    box-shadow: 0 0 0 0;
-    outline: none;
-    background-color: rgb(255, 255, 255, 1);
+  box-shadow: 0 0 0 0;
+  outline: none;
+  background-color: rgb(255, 255, 255, 1);
 }
 
 header nav .search-field img {
-    position: absolute;
-    left: 1;
-    margin-left: 12px;
-    width: 18px;
-    opacity: .7;
+  position: absolute;
+  left: 1;
+  margin-left: 12px;
+  width: 18px;
+  opacity: 0.7;
 }
 
 header nav form {
-    align-items: center;
+  align-items: center;
 }
 
 header .user-field-img {
-    margin-left: 25px;
-    display: flex;
-    border: 2px solid rgb(255, 255, 255);
-    border-radius: 30px;
-    height: 25px;
-    width: 25px;
-    padding: 18px;
-    align-items: center;
-    justify-content: center;
+  margin-left: 25px;
+  display: flex;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 30px;
+  height: 25px;
+  width: 25px;
+  padding: 18px;
+  align-items: center;
+  justify-content: center;
 }
 
 header .user-field {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: .85;
-    transition: all .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.85;
+  transition: all 0.3s;
 }
 
 header .user-field:hover {
-    opacity: 1;
-    cursor: pointer;
+  opacity: 1;
+  cursor: pointer;
 }
 
 header .user-field img {
-    height: 25px;
-    width: 25px;
+  height: 25px;
+  width: 25px;
 }
 
 header .user-text-field span {
-    margin-left: 10px;
-    font-size: .9em;
-    color: #FFF;
-    display: block;
+  margin-left: 10px;
+  font-size: 0.9em;
+  color: #fff;
+  display: block;
 }
 
 header .user-text-field a .usual-text:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 header .user-text-field span a {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 header .user-text-field span.mod-text:hover {
-    text-decoration: underline;
-    opacity: 1;
+  text-decoration: underline;
+  opacity: 1;
 }
 
 /* PRINCIPAL */
 
 main {
-    background-image: url(../imgs/background.jpg);
+  background-image: url(../imgs/background.jpg);
 }
 
 main #carousel-section div.carousel-indicators button {
-    background-color: #FFF;
+  background-color: #fff;
 }
 
 main #carousel-section button.buy {
-    color: #FFF;
-    font-weight: 600;
-    border: none;
-    width: 130px;
-    height: 40px;
-    border-radius: 30px;
-    margin-bottom: 0;
-    transition: background .1s;
+  color: #fff;
+  font-weight: 600;
+  border: none;
+  width: 130px;
+  height: 40px;
+  border-radius: 30px;
+  margin-bottom: 0;
+  transition: background 0.1s;
 }
 
 main #carousel-section button.buy-1 {
-    background-color: rgb(78, 15, 98);
+  background-color: rgb(78, 15, 98);
 }
 
 main #carousel-section button.buy-2 {
-    background-color: rgb(120, 22, 35);
+  background-color: rgb(120, 22, 35);
 }
 
 main #carousel-section button.buy-3 {
-    background-color: rgb(84, 150, 42);
+  background-color: rgb(84, 150, 42);
 }
 
 main #carousel-section button.buy-1:hover {
-    background-color: rgb(108, 21, 134);
+  background-color: rgb(108, 21, 134);
 }
 
 main #carousel-section button.buy-2:hover {
-    background-color: rgb(143, 27, 42);
+  background-color: rgb(143, 27, 42);
 }
 
 main #carousel-section button.buy-3:hover {
-    background-color: rgb(89, 163, 43);
+  background-color: rgb(89, 163, 43);
 }
 
 main #about-section {
-    padding-bottom: 5rem;
+  padding-bottom: 5rem;
 }
 
 main #about-section .container {
-    padding-top: 5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+  padding-top: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 main #about-section .container > div.left-side {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 main #about-section .container > div.right-side {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
 main #about-section .container > div.left-side div {
-    margin: 20px 0;
-    padding-left: 5px;
+  margin: 20px 0;
+  padding-left: 5px;
 }
 
 main #about-section .container > div.left-side div div {
-    box-shadow: 0 0 10px rgb(0, 0, 0, .15);
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.15);
 }
 
 main #about-section .container > div.left-side div .shoes img,
@@ -204,329 +204,331 @@ main #about-section .container > div.left-side div .marcas img,
 main #about-section .container > div.left-side div .frete img,
 main #about-section .container > div.left-side div .variedade img,
 main #about-section .container > div.left-side div .preco img {
-    width: 65px;
-    padding: 15px;
-    border-radius: 35px;
-    margin: 12px;
+  width: 65px;
+  padding: 15px;
+  border-radius: 35px;
+  margin: 12px;
 }
 
 main #about-section .container > div.left-side div .shoes {
-    background-color: rgb(0, 131, 28, .1);
+  background-color: rgb(0, 131, 28, 0.1);
 }
 main #about-section .container > div.left-side div .shoes img {
-    background-color: rgb(0, 207, 86);
+  background-color: rgb(0, 207, 86);
 }
 
 main #about-section .container > div.left-side div .frete {
-    background-color: rgb(95, 0, 204, .1);
+  background-color: rgb(95, 0, 204, 0.1);
 }
 
 main #about-section .container > div.left-side div .frete img {
-    background-color: #5f00cc;
+  background-color: #5f00cc;
 }
 
 main #about-section .container > div.left-side div .variedade {
-    background-color: rgb(0, 81, 255, .1);
+  background-color: rgb(0, 81, 255, 0.1);
 }
 
 main #about-section .container > div.left-side div .variedade img {
-    background-color: rgb(0, 81, 255);
+  background-color: rgb(0, 81, 255);
 }
 
 main #about-section .container > div.left-side div .preco {
-    background-color: rgb(224, 146, 0, .1);
+  background-color: rgb(224, 146, 0, 0.1);
 }
 
 main #about-section .container > div.left-side div .preco img {
-    background-color: rgb(224, 146, 0);
+  background-color: rgb(224, 146, 0);
 }
 
 main #about-section .container > div.left-side div div {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    width: 485px;
-    border: 1px solid rgb(0, 0, 0, .15);
-    border-radius: 15px;
-    gap: 5px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  width: 485px;
+  border: 1px solid rgb(0, 0, 0, 0.15);
+  border-radius: 15px;
+  gap: 5px;
 }
 
 main #about-section .container > div.left-side div div h3 {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 main #about-section .container > div.left-side div div div {
-    justify-content: center;
-    height: 60px;
-    width: 60px;
-    border-radius: 50px;
-    background-color: aquamarine;
-    border: none;
+  justify-content: center;
+  height: 60px;
+  width: 60px;
+  border-radius: 50px;
+  background-color: aquamarine;
+  border: none;
 }
 
 main #about-section .container > div p {
-    letter-spacing: 1px;
+  letter-spacing: 1px;
 }
 
 main #about-section .container > div.right-side p {
-    width: 500px;
-    margin-top:25px;
-    font-size: .9em;
+  width: 500px;
+  margin-top: 25px;
+  font-size: 0.9em;
 }
 
 main #about-section div.right-side div h3 {
-    font-size: 1.4em;
-    font-weight: 600;
-    color: rgb(116, 22, 160);
+  font-size: 1.4em;
+  font-weight: 600;
+  color: rgb(116, 22, 160);
 }
 
 main #about-section div.right-side div h1 {
-    font-size: 4rem;
-    font-weight: 600;
+  font-size: 4rem;
+  font-weight: 600;
 }
 
 main #ofertas-section {
-    padding-bottom: 6rem;
+  padding-bottom: 6rem;
 }
 
 main #ofertas-section div.ofertas-container,
 main #team-section div.team-container {
-    text-align: center;
+  text-align: center;
 }
 
 main #ofertas-section div.ofertas-container h1,
 main #team-section div.team-container h1 {
-    font-weight: 600;
-    padding-top: 5rem;
+  font-weight: 600;
+  padding-top: 5rem;
 }
 
 main #ofertas-section div.ofertas-container h1 span {
-    border-bottom: 4px solid green;
-    border-radius: 1px;
+  border-bottom: 4px solid green;
+  border-radius: 1px;
 }
 
 main #ofertas-section div.ofertas-container img {
-    width: 210px;
-    padding: 20px 0;
-    margin: 0 auto;
+  width: 210px;
+  padding: 20px 0;
+  margin: 0 auto;
 }
 
 main #ofertas-section div.ofertas-container .card-3 img {
-    width: 200px;
-    padding: 10px 0;
+  width: 200px;
+  padding: 10px 0;
 }
 
 main #ofertas-section div.ofertas-container .card {
-    background-color: rgb(228, 228, 228);
-    margin: 50px 20px 0;
-    box-shadow: 0 0 10px rgb(0, 0, 0, .2);
-    transition: all .3s;
+  background-color: rgb(228, 228, 228);
+  margin: 50px 20px 0;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
+  transition: all 0.3s;
 }
 
 main #ofertas-section div.ofertas-container .card:hover {
-    scale: 1.015;
+  scale: 1.015;
 }
 
 main #ofertas-section div.ofertas-container .card .card-body {
-    text-align: start;
-    background-color: #FFF;
+  text-align: start;
+  background-color: #fff;
 }
 
 main #ofertas-section div.ofertas-container .card a {
-    background-color: #00831c;
-    border: none;
-    font-weight: 600;
-    transition: all ease-in 0.15s;
+  background-color: #00831c;
+  border: none;
+  font-weight: 600;
+  transition: all ease-in 0.15s;
 }
 
 main #ofertas-section div.ofertas-container .card a:hover {
-    background-color: #00aa25;
+  background-color: #00aa25;
 }
 
 main #ofertas-section div.ofertas-container .card .card-body a.carrinho-btn {
-    background-color: #FFF;
-    border: 1px solid #00831c;
-    color: #00831c;
-    transition: all ease-in 0.15s;
+  background-color: #fff;
+  border: 1px solid #00831c;
+  color: #00831c;
+  transition: all ease-in 0.15s;
 }
 
-main #ofertas-section div.ofertas-container .card .card-body a.carrinho-btn:hover {
-    background-color: #00aa25;
-    border: 1px solid #00aa25;
-    color: #FFF;
+main
+  #ofertas-section
+  div.ofertas-container
+  .card
+  .card-body
+  a.carrinho-btn:hover {
+  background-color: #00aa25;
+  border: 1px solid #00aa25;
+  color: #fff;
 }
-
 
 main #ofertas-section div.ofertas-container .card .card-body h5 {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 main #ofertas-section div.ofertas-container .card .card-body span {
-    display: block;
+  display: block;
 }
 
 main #ofertas-section div.ofertas-container .card .card-body span.old-price {
-    font-size: .8em;
-    text-decoration: line-through;
-    opacity: .7;
+  font-size: 0.8em;
+  text-decoration: line-through;
+  opacity: 0.7;
 }
 
 main #ofertas-section div.ofertas-container .card .card-body span.new-price {
-    font-size: 1.1em;
-    font-weight: 600;
-    color: rgb(172, 0, 0);
-    margin-bottom: 10px;
+  font-size: 1.1em;
+  font-weight: 600;
+  color: rgb(172, 0, 0);
+  margin-bottom: 10px;
 }
 
 main #ofertas-section div.ofertas-container .card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 main #team-section {
-    padding-bottom: 6rem;
+  padding-bottom: 6rem;
 }
 
 main #team-section div.team-container .team {
-    margin-top: 5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
+  margin-top: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 main #team-section div.team-container h1 span {
-    border-bottom: 4px solid orange;
+  border-bottom: 4px solid orange;
 }
 
 main #team-section div.team-container .team > div {
-    background-color: #FFF;
-    /* border: 1px solid rgb(0, 0, 0, .25); */
-    box-shadow: 5px 5px 13px rgb(0, 0, 0, .25);
-    padding: 25px;
-    border-radius: 10px;
+  background-color: #fff;
+  /* border: 1px solid rgb(0, 0, 0, .25); */
+  box-shadow: 5px 5px 13px rgb(0, 0, 0, 0.25);
+  padding: 25px;
+  border-radius: 10px;
 }
 
 main #team-section div.team-container .team > div h4 {
-    margin: 25px 0;
-    font-size: 1.3em;
-    font-weight: bold;
+  margin: 25px 0;
+  font-size: 1.3em;
+  font-weight: bold;
 }
 
 main #team-section div.team-container .team > div h6 {
-    font-size: .9em;
-    font-weight: bold;
+  font-size: 0.9em;
+  font-weight: bold;
 }
 
 main #team-section div.team-container .team > div p {
-    width: 220px;
-    text-align: center;
-    opacity: .9;
-    font-style: italic;
-    font-size: .9em;
+  width: 220px;
+  text-align: center;
+  opacity: 0.9;
+  font-style: italic;
+  font-size: 0.9em;
 }
 
 main #team-section div.team-container .team img {
-    width: 170px;
-    border-radius: 200px;
-    border: 2px solid orange;
+  width: 170px;
+  border-radius: 200px;
+  border: 2px solid orange;
 }
 
 main #team-section div.team-container .team .social-media {
-    margin-top: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 7px;
-
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
 }
 
 main #team-section div.team-container .team .social-media img {
-    width: 20px;
-    opacity: .9;
-    transition: all .1s;
-    border: none;
+  width: 20px;
+  opacity: 0.9;
+  transition: all 0.1s;
+  border: none;
 }
 
 main #team-section div.team-container .team .social-media img:hover {
-    scale: 1.06;
-    cursor: pointer;
+  scale: 1.06;
+  cursor: pointer;
 }
-
 
 /* RODAPÉ */
 
 footer {
-    background: linear-gradient(to right, #2a0059, #01676e);
-    color: #FFF;
-    border-top: 1px solid rgb(255, 255, 255, .2);
+  background: linear-gradient(to right, #2a0059, #01676e);
+  color: #fff;
+  border-top: 1px solid rgb(255, 255, 255, 0.2);
 }
 
 footer #links-section {
-    padding: 40px;
-    padding-right: 72px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 4rem;
+  padding: 40px;
+  padding-right: 72px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 4rem;
 }
 
 footer #links-section div h6 {
-    color: #14FFD9;
-    font-size: 1em;
-    margin-left: 2rem;
-    font-weight: bold;
+  color: #14ffd9;
+  font-size: 1em;
+  margin-left: 2rem;
+  font-weight: bold;
 }
 
 footer #links-section div ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 footer #links-section div:nth-child(4) ul {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 footer #links-section div ul li {
-    margin: 8px 0;
+  margin: 8px 0;
 }
 
 footer #links-section div ul li a {
-    font-size: .8em;
-    color: #FFF;
-    text-decoration: none;
-    opacity: .75;
-    transition: .1s ease-in-out;
+  font-size: 0.8em;
+  color: #fff;
+  text-decoration: none;
+  opacity: 0.75;
+  transition: 0.1s ease-in-out;
 }
 
 footer #links-section div ul li a:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 footer #others-section .others-img-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 2rem;
 }
 
 footer #others-section .others-img-container img {
-    height: 45px;
+  height: 45px;
 }
 
 footer #others-section .others-img-container img.icon {
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
 }
 
 footer #others-section .others-text-container {
-    text-align: center;
-    font-size: .6em;
-    width: 50%;
-    margin: 0 auto;
-    padding-bottom: 10px;
+  text-align: center;
+  font-size: 0.6em;
+  width: 50%;
+  margin: 0 auto;
+  padding-bottom: 10px;
 }
